--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+
+REACT_APP_FIREBASE_PROJECT_ID=sipasta
+REACT_APP_FIREBASE_API_KEY=AIzaSyA6_Q_OLEFzirQ9QvyA0saGbw7uDth83lw
