--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.8.0"
   }
