--- a/sipasta-ui/package.json
+++ b/sipasta-ui/package.json
@@ -18,6 +18,7 @@
     "@uiw/react-codemirror": "^4.12.4",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.14.0",
     "framer-motion": "^6.5.1",
     "next": "13.0.2",
     "react": "18.2.0",
