--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,18 @@
   "name": "sipasta-backend",
   "version": "1.0.0",
   "description": "backend of sipasta",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/fadhilrasendriya/sipasta",
   "author": "sipasta devs",
   "license": "MIT",
   "scripts": {
-    "migrate": "node-pg-migrate"
+    "migrate": "node-pg-migrate",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.8.0"
   }
