--- a/sipasta-ui/.env
+++ b/sipasta-ui/.env
@@ -1,2 +1,5 @@
 # Enviroment Variable for API Link
 BACKEND_URL = http://127.0.0.1:8090
+PROJECT_ID = sipasta
+AUTH_DOMAIN = sipasta.firebaseapp.com
+API_KEY= AIzaSyA6_Q_OLEFzirQ9QvyA0saGbw7uDth83lw
