--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "5432:5432"
     networks:
       - postgres
-    restart: unless-stopped
+    restart: always
   
   pgadmin:
     container_name: pgadmin_container
@@ -30,7 +30,25 @@ services:
       - "${PGADMIN_PORT:-5050}:80"
     networks:
       - postgres
-    restart: unless-stopped
+    restart: always
+
+  nodejs:
+    depends_on: 
+      - postgres
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nodejs_container
+    restart: always
+    environment:
+      - DATABASE_URL=$DATABASE_URL
+      - FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID
+      - FIREBASE_CLIENT_EMAIL=FIREBASE_CLIENT_EMAIL
+      - FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY
+    ports:
+      - "80:3000"
+    networks:
+      - postgres
 
 networks:
   postgres:
@@ -39,3 +57,4 @@ networks:
 volumes:
     postgres:
     pgadmin:
+    node_modules:
