--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "migrate": "node-pg-migrate",
-    "start": "node src/index.js"
+    "start": "node-pg-migrate up && node src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
