--- a/manifest/backend/hpa.yaml
+++ b/manifest/backend/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: sipapsta-backend
+  name: sipasta-backend
   namespace: default
 spec:
   maxReplicas: 10
