change frontend and backend url in manifest

--- a/manifest/frontend/kustomization.yaml
+++ b/manifest/frontend/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 configMapGenerator:
   - name: sipasta-ui
     literals:
-      - BACKEND_URL=http://127.0.0.1
+      - BACKEND_URL=http://api.sipasta.rpksus.xyz
       - PROJECT_ID=sipasta
       - AUTH_DOMAIN=sipasta.firebaseapp.com
       - API_KEY=AIzaSyA6_Q_OLEFzirQ9QvyA0saGbw7uDth83lw
