--- a/manifest/frontend/deployment.yaml
+++ b/manifest/frontend/deployment.yaml
@@ -36,5 +36,8 @@ spec:
               port: http
           resources:
             limits:
-              memory: 2048Mi
-              cpu: 250m
+              memory: 128Mi
+              cpu: 100m
+            requests:
+              memory: 64Mi
+              cpu: 50m
